[tool.poetry]
name = "vc-proj"
version = "0.1.0"
description = ""
authors = ["toni-santos <a.oliveirasantos122@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
